Z-Index fix

--- a/app/styles/inner-table.less
+++ b/app/styles/inner-table.less
@@ -18,7 +18,7 @@
   left: 0;
   position: sticky;
   flex-grow: 1;
-  z-index: 1000;
+  z-index: 20;
 
   .hypertable__cell,
   header {
